--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <p>Setiap kali saya push kod, laman web akan dikemas kini sendiri!</p>
         <p>Kemas kini pertama saya</p>
   
-    <p><strong>Nama:</strong> ZeddAzmi</p>
-    <p><strong>Tarikh:</strong> 02/12/2025</p>
+    <p><strong>Nama:</strong> {{NAMA}}</p>
+    <p><strong>Tarikh:</strong> {{TARIKH}}</p>
 </main>
 </body>
 </html>
